# dcnn-tube-mpc-dbs

./: .gitignore  CITATION.cff  CONTRIBUTING.md  DISCLAIMER.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: quick_demo.py
scripts/: run_dcnn_mpc.py
src/dcnn_tube_mpc/: __init__.py
src/dcnn_tube_mpc/analysis/: __init__.py  cost_function.py  jacobian.py
src/dcnn_tube_mpc/bounds/: __init__.py  aci_bounds.py  disturbance_bounds.py  dkw_bounds.py  perturbation_bounds.py
src/dcnn_tube_mpc/config/: __init__.py  device_config.py  device_params.json
src/dcnn_tube_mpc/controllers/: __init__.py  scp_algorithm.py  scp_config.py  scp_controller.py
src/dcnn_tube_mpc/evaluation/: evaluate.py
src/dcnn_tube_mpc/models/: __init__.py  arx_model.py  dcnn_models.py  device_utils.py  ensemble_predictor.py  spectral_norm.py
src/dcnn_tube_mpc/simulation/: __init__.py  simulate.py
src/dcnn_tube_mpc/solvers/: __init__.py  direct_qp_solver.py  osqp_solver.py  piqp_solver.py  qp_solver.py
src/dcnn_tube_mpc/synthetic/: __init__.py  data_generator.py  modulation.py
src/dcnn_tube_mpc/training/: __init__.py  train_predictor.py
src/dcnn_tube_mpc_dbs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_aci_bounds.py  test_scp_core.py
