[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dcnn-tube-mpc-dbs"
version = "0.1.0"
description = "DC neural network tube MPC for closed-loop DBS"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [{name = "Joshua Ampomah"}]
dependencies = [
    "numpy>=1.24,<2.0",
    "scipy>=1.10,<1.15",
    "matplotlib>=3.7,<4.0",
    "torch>=2.0,<3.0",
    "cvxpy>=1.4,<1.6",
    "osqp>=0.6,<1.1",
    "piqp>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
where = ["src"]
